test/localeModels/numa/basics/bad_children.good
bad_children.chpl:2: error: halt reached - No children to iterate over.
