test/localeModels/numa/basics/bad_children.chpl
var myNumaDomain = (here:LocaleModel).getChild(0):NumaDomain;
for child in myNumaDomain.getChildren() do
  writeln(child);
